--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,7 @@
 .banner-header {
-  background-color: silver;
+  margin: 0;
+  padding: 0;
+  background-color: lightgreen;
   text-align: center;
   padding: 0.25em;
 }
