--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin: 10;
+  padding: 10;
   font-family: sans-serif;
+}
+
+.inputs {
+  box-shadow: 5px 5px 5px lightgreen;
 }
